# garlic-daemon

./: .gitignore  CMakeLists.txt
include/: command-line-parser.hpp  daemon.hpp  dbus_server.hpp  log.hpp  watchdog.h
resource/config/: garlic-daemon.conf
resource/systemd/: garlic-daemon.service
scripts/: send-signal.sh
source/: cmd_parser.cpp  cmd_parser.hpp  configuration.cpp  configuration.hpp  daemon.cpp  daemon.hpp  dbus_server.cpp  ipc_message_receiver.cpp  ipc_message_receiver.hpp  log.hpp  main.cpp  message_dispatcher.cpp  message_dispatcher.hpp  watchdog.cpp  watchdog.hpp
